update dnsmasq & hostapd

--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -31,7 +31,7 @@ bogus-priv
 stop-dns-rebind
 
 # log DNS queries
-log-queries
+#log-queries
 # Log lots of extra information about DHCP transactions.
 #log-dhcp
 
