--- a/etc/dnsmasq.d/ap0.conf
+++ b/etc/dnsmasq.d/ap0.conf
@@ -1,13 +1,29 @@
+no-resolv
+user=dnsmasq
+group=dnsmasq
+domain-needed
+bogus-priv
+stop-dns-rebind
+server=8.8.8.8
+server=8.8.4.4
+
 listen-address=192.168.20.1
-## Interface to bind to
-#interface=ap0
-bind-dynamic
+bind-interfaces
 # Specify starting_range,end_range,lease_time
-dhcp-range=192.168.20.1,192.168.20.254,255.255.255.0,12h
-dhcp-option=option:router,192.168.20.1
-# do not include /etc/hosts, instead use an other file
+dhcp-range=192.168.20.1,192.168.20.200,255.255.255.0,12h
+# router ip
+dhcp-option=3,192.168.20.1
+# DNS server
+dhcp-option=6,192.168.20.1
+# domain name
+dhcp-option=15,ap.lejenome.me
 no-hosts
 addn-hosts=/etc/hosts.ap0
-## dns addresses to send to the clients
-#server=8.8.8.8
-#server=8.8.4.4
+
+# static ip
+dhcp-host=00:E0:4C:27:59:88,192.168.20.202,fatma-android
+dhcp-host=0C:D2:92:A5:6D:B5,192.168.20.201,hanen-wifi
+# run /bin/echo {add,del} [MAC-ADDRESS] when changes happens
+dhcp-script=/bin/echo
+
+log-queries
