--- a/etc/hostapd/hostapd.conf
+++ b/etc/hostapd/hostapd.conf
@@ -1,10 +1,11 @@
 interface=ap0
-ssid=FreeWifi
-wpa_passphrase=FreeWifi
+#ssid=FreeWifi
+#wpa_passphrase=FreeWifi
+ssid=lejenome-wifi
+wpa_passphrase=DCRLOPHS
 driver=nl80211
 hw_mode=g
-channel=1
-#channel=7
+channel=6
 logger_stdout=-1
 logger_stdout_level=2
 max_num_sta=5
@@ -14,6 +15,7 @@ wpa_pairwise=CCMP TKIP
 rsn_pairwise=CCMP
 country_code=TN
 auth_algs=1
-ignore_broadcast_ssid=0
+#ignore_broadcast_ssid=0
+ignore_broadcast_ssid=1
 macaddr_acl=0
 beacon_int=100
