update qemu0 dnsmasq conf

--- a/etc/dnsmasq.d/qemu0.conf
+++ b/etc/dnsmasq.d/qemu0.conf
@@ -23,6 +23,7 @@ no-hosts
 addn-hosts=/etc/hosts.qemu0
 
 dhcp-host=fe:dc:ba:99:88:01,192.168.2.2,qemu-ubuntu
+dhcp-host=fe:dc:ba:99:88:02,192.168.2.3,qemu-android
 
 log-dhcp
 #log-queries
