update ap0 dns server conf

--- a/etc/dnsmasq.d/ap0.conf
+++ b/etc/dnsmasq.d/ap0.conf
@@ -10,7 +10,7 @@ server=8.8.4.4
 listen-address=192.168.20.1
 bind-interfaces
 # Specify starting_range,end_range,lease_time
-dhcp-range=192.168.20.1,192.168.20.200,255.255.255.0,12h
+dhcp-range=192.168.20.128,192.168.20.255,255.255.255.0,12h
 # router ip
 dhcp-option=3,192.168.20.1
 # DNS server
@@ -21,8 +21,9 @@ no-hosts
 addn-hosts=/etc/hosts.ap0
 
 # static ip
-dhcp-host=00:E0:4C:27:59:88,192.168.20.202,fatma-android
-dhcp-host=0C:D2:92:A5:6D:B5,192.168.20.201,hanen-wifi
+dhcp-host=0C:D2:92:A5:6D:B5,192.168.20.2,hanen-wifi
+dhcp-host=00:E0:4C:27:59:88,192.168.20.3,fatma-android
+dhcp-host=D8:3C:69:76:61:77,192.168.20.4,yassine-android
 # run /bin/echo {add,del} [MAC-ADDRESS] when changes happens
 dhcp-script=/bin/echo
 
