--- a/etc/dnsmasq.d/static-ip.conf
+++ b/etc/dnsmasq.d/static-ip.conf
@@ -4,6 +4,7 @@ dhcp-host=24:FD:52:4E:1A:68,192.168.1.2,lejenome-wifi
 dhcp-host=7C:05:07:A3:88:19,192.168.1.3,lejenome-eth
 dhcp-host=0C:D2:92:A5:6D:B5,192.168.1.4,hanen-wifi
 dhcp-host=00:E0:4C:27:59:88,192.168.1.6,fatma-android
+dhcp-host=D8:3C:69:76:61:77,192.168.1.7,yassine-android
 # ignore all other host with unlisted MAC addresses
 dhcp-ignore=tag:!known
 # tell dnsmasq that it is not running on the router device
