--- a/etc/nodogsplash/nodogsplash.conf
+++ b/etc/nodogsplash/nodogsplash.conf
@@ -76,8 +76,7 @@ PasswordAttempts 3
 
 GatewayIPRange 192.168.20.128/25
 
-ImagesDir .
-pagesDir  .
+ImagesDir images
 
 # Parameter: BinVoucher
 # Default: None
