zsh & gnupg & weston updates

--- a/~/.config/weston.ini
+++ b/~/.config/weston.ini
@@ -1,6 +1,8 @@
 [core]
 shell=desktop-shell.so
-modules=xwayland.so
+#modules=xwayland.so
+idle-time=600
+backend=drm-backend.so
 
 [shell]
 background-image=/home/lejenome/Pictures/archlinux_1.jpg
@@ -35,7 +37,7 @@ transform=90
 
 [terminal]
 #font=Source Code Pro
-font=Cousine
+font=Anonymous Pro
 font-size=10
 term=rxvt-unicode-256color
 
