--- a/~/.mozilla/firefox/profiles.ini
+++ b/~/.mozilla/firefox/profiles.ini
@@ -12,3 +12,7 @@ Name=default-chrome-debugger
 IsRelative=1
 Path=iivf0n2q.default-chrome-debugger
 
+[Profile2]
+Name=test
+IsRelative=1
+Path=test
