update gtk 2.0 & 3.0 config

--- a/~/.config/gtk-3.0/settings.ini
+++ b/~/.config/gtk-3.0/settings.ini
@@ -10,3 +10,7 @@ gtk-toolbar-icons-size = 'small'
 #gtk-text-scaling-factor = 1.0
 gtk-monospace-font-name = 'Monospace 9'
 gtk-menu-popup-delay = 0
+
+# More privacy: disable ~/.local/share/recently-used.xbel
+gtk-recent-files-max-age=0
+gtk-recent-files-limit=0
