add more XF86 keys on i3

--- a/~/.i3/config
+++ b/~/.i3/config
@@ -152,9 +152,15 @@ bindsym XF86AudioPrev exec "mpc prev"
 bindsym XF86MonBrightnessUp    exec  "xbacklight -inc 10"
 bindsym XF86MonBrightnessDown  exec  "xbacklight -dec 10"
 bindsym XF86TouchpadToggle exec "synclient TouchpadOff=$(synclient | awk '/TouchpadOff/ {print ($3+1)%2}')"
-bindsym Print         exec  scrot
+bindsym Print         exec  "scrot"
 # used sudoers to remove the needs to enter password
-bindsym Pause         exec  sudo systemctl suspend
+bindsym Pause         exec  "sudo systemctl suspend"
+bindsym Scroll_Lock   exec  "sudo shutdown 0"
+bindsym XF86Search    exec  "firefox google.com"
+bindsym XF86Mail      exec  "getmails"
+bindsym XF86HomePage  exec  "i3-msg 'workspace 2:  TERM'"
+bindsym XF86Explorer  exec  "urxvt-vifm"
+
 
 bindsym $mod+Shift+t exec ~/.i3/TERM.sh
 
