update linux and dnsmaq

--- a/etc/dnsmasq.d/static-ip.conf
+++ b/etc/dnsmasq.d/static-ip.conf
@@ -5,6 +5,7 @@ dhcp-host=7C:05:07:A3:88:19,192.168.1.3,lejenome-eth
 dhcp-host=0C:D2:92:A5:6D:B5,192.168.1.4,hanen-wifi
 dhcp-host=00:E0:4C:27:59:88,192.168.1.6,fatma-android
 dhcp-host=D8:3C:69:76:61:77,192.168.1.7,yassine-android
+dhcp-host=CC:07:AB:9D:56:62,192.168.1.8,mourad-android
 # ignore all other host with unlisted MAC addresses
 dhcp-ignore=tag:!known
 # tell dnsmasq that it is not running on the router device
