--- a/etc/dnsmasq.d/ap0.conf
+++ b/etc/dnsmasq.d/ap0.conf
@@ -24,6 +24,7 @@ addn-hosts=/etc/hosts.ap0
 dhcp-host=0C:D2:92:A5:6D:B5,192.168.20.2,hanen-wifi
 dhcp-host=00:E0:4C:27:59:88,192.168.20.3,fatma-android
 dhcp-host=D8:3C:69:76:61:77,192.168.20.4,yassine-android
+dhcp-host=CC:07:AB:9D:56:62,192.168.20.5,mourad-android
 # run /bin/echo {add,del} [MAC-ADDRESS] when changes happens
 dhcp-script=/bin/echo
 
