update ssh & zsh envars & makepkg & polipo & caching dir

--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -38,6 +38,9 @@ Host docker-skype
   RemoteForward 64713 localhost:4713
   ForwardX11 yes
 
+Host android.qemu
+  MACs hmac-sha1
+
 # based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
 Host *
     KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
