--- a/etc/makepkg.conf
+++ b/etc/makepkg.conf
@@ -92,13 +92,13 @@ PURGE_TARGETS=(usr/{,share}/info/dir .packlist *.pod)
 # Default: put built package and cached source in build directory
 #
 #-- Destination: specify a fixed directory where all packages will be placed
-PKGDEST=/home/build/packages-$USER
+PKGDEST=/home/cache/makepkg-$USER-packages
 #-- Source cache: specify a fixed directory where source files will be cached
-SRCDEST=/home/build/sources-$USER
+SRCDEST=/home/cache/makepkg-$USER-sources
 #-- Source packages: specify a fixed directory where all src packages will be placed
-SRCPKGDEST=/home/build/srcpackages-$USER
+SRCPKGDEST=/home/cache/makepkg-$USER-srcpackages
 #-- Log files: specify a fixed directory where all log files will be placed
-LOGDEST=/home/build/makepkglogs
+LOGDEST=/home/cache/makepkg-$USER-logs
 #-- Packager: name/email of the person or organization building packages
 PACKAGER="Moez Bouhlel <bmoez.j@gmail.com>"
 #-- Specify a key to use for package signing
