keydgenkeys service fix

--- a/etc/systemd/system/sshdgenkeys.service
+++ b/etc/systemd/system/sshdgenkeys.service
@@ -13,8 +13,8 @@ ConditionPathExists=|!/etc/ssh/ssh_host_ed25519_key
 ConditionPathExists=|!/etc/ssh/ssh_host_ed25519_key.pub
 
 [Service]
-ExecStartPre=/usr/bin/rm /etc/ssh/ssh_host_*key*
-ExecStart=/usr/bin/ssh-keygen -t ed25519 -f /etc/ssh/ssh_host_ed25519_key
-ExecStart=/usr/bin/ssh-keygen -t rsa -b 4096 -f /etc/ssh/ssh_host_rsa_key
+ExecStartPre=/bin/sh -c "rm /etc/ssh/ssh_host_*key*"
+ExecStart=/usr/bin/ssh-keygen -t ed25519 -f /etc/ssh/ssh_host_ed25519_key -N ""
+ExecStart=/usr/bin/ssh-keygen -t rsa -b 4096 -f /etc/ssh/ssh_host_rsa_key -N ""
 Type=oneshot
 RemainAfterExit=yes
