--- a/~/.i3/config
+++ b/~/.i3/config
@@ -156,12 +156,13 @@ bindsym Print         exec  "scrot"
 # used sudoers to remove the needs to enter password
 bindsym Pause         exec  "sudo systemctl suspend"
 bindsym Scroll_Lock   exec  "sudo shutdown 0"
-bindsym XF86Search    exec  "firefox google.com"
+bindsym XF86Search    exec  "~/.i3/keymouse.sh"
 bindsym XF86Mail      exec  "getmails"
 bindsym XF86HomePage  exec  "i3-msg 'workspace 2:  TERM'"
 bindsym XF86Explorer  exec  "urxvt-vifm"
 
 
+bindsym $mod+Shift+m exec sh ~/.i3/keymouse.sh
 bindsym $mod+Shift+t exec ~/.i3/TERM.sh
 
 focus_follows_mouse no
