update dnsmasq and squid config

--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -69,7 +69,8 @@ sslcrtd_children 20
 
 # Squid normally listens to port 3128
 #http_port 3128
-http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/ssl_cert/squid-CA.pem
+http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/privkey.pem
+#https_port 3129 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/privkey.pem version=4
 
 # Uncomment and adjust the following to add a disk cache directory.
 cache_dir diskd /home/cache/squid 3000 16 256
