--- a/etc/dnsmasq.d/static-ip.conf
+++ b/etc/dnsmasq.d/static-ip.conf
@@ -6,6 +6,8 @@ dhcp-host=0C:D2:92:A5:6D:B5,192.168.1.4,hanen-wifi
 dhcp-host=00:E0:4C:27:59:88,192.168.1.6,fatma-android
 dhcp-host=D8:3C:69:76:61:77,192.168.1.7,yassine-android
 dhcp-host=CC:07:AB:9D:56:62,192.168.1.8,mourad-android
+dhcp-host=6C:71:D9:5C:88:DD,192.168.1.9,firas-wifi
+dhcp-host=0C:BD:51:00:DA:1E,192.168.1.10,firas-mobile
 # ignore all other host with unlisted MAC addresses
 dhcp-ignore=tag:!known
 # tell dnsmasq that it is not running on the router device
