update squid and linux

--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -57,20 +57,25 @@ http_access deny all
 
 ssl_bump none localnet
 ssl_bump server-first all
-sslproxy_version 6
+sslproxy_version 5
 sslproxy_options NO_SSLv2,NO_SSLv3,NO_TLSv1
 sslproxy_cert_error deny all
 sslproxy_flags DONT_VERIFY_PEER
 #sslproxy_chiper;
 always_direct allow all
 # http://wiki.squid-cache.org/Features/DynamicSslCert
-sslcrtd_program /usr/lib/squid/ssl_crtd -s /home/cache/squid-ssl-db -M 50MB
+sslcrtd_program /usr/lib/squid/ssl_crtd -s /home/cache/squid-ssl -M 50MB
 sslcrtd_children 20
 
-# Squid normally listens to port 3128
-#http_port 3128
-http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/privkey.pem
-#https_port 3129 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/privkey.pem version=4
+# 3128 for user manual config
+http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
+# 3129 for tranparent proxy for IPv4
+http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
+# 3130 for https proxy
+https_port 3130 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB version=4 cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
+#disable icp and snmp
+icp_port 0
+snmp_port 0
 
 # Uncomment and adjust the following to add a disk cache directory.
 cache_dir diskd /home/cache/squid 3000 16 256
