fix dnsmasq error

--- a/etc/dnsmasq.conf
+++ b/etc/dnsmasq.conf
@@ -5,7 +5,7 @@ user=dnsmasq
 group=dnsmasq
 
 listen-address=127.0.0.1
-interface=wlp8s0
+#interface=wlp8s0
 # only listen to listen-address addresses
 bind-interfaces
 
