update squid conf to the lastest version

--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -55,8 +55,8 @@ http_access allow localhost
 # And finally deny all other access to this proxy
 http_access deny all
 
-ssl_bump none localnet
-ssl_bump server-first all
+ssl_bump splice localnet
+ssl_bump bump all
 sslproxy_version 5
 sslproxy_options NO_SSLv2,NO_SSLv3,NO_TLSv1
 sslproxy_cert_error deny all
