--- a/~/.muttrc
+++ b/~/.muttrc
@@ -6,6 +6,8 @@ set send_charset="utf-8"
 set delete = yes
 set beep_new
 set fast_reply = yes
+set use_from=yes
+set envelope_from=yes
 set hostname = "lejenome.me"
 
 set mailcap_path    = ~/.mailcap
