--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -68,11 +68,11 @@ sslcrtd_program /usr/lib/squid/ssl_crtd -s /home/cache/squid-ssl -M 50MB
 sslcrtd_children 20
 
 # 3128 for user manual config
-http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
+http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/squid.lejenome.me.pem
 # 3129 for tranparent proxy for IPv4
-http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
-# 3130 for https proxy
-https_port 3130 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB version=4 cert=/etc/squid/cert/cacert.pem key=/etc/squid/cert/privkey.pem
+http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/squid.lejenome.me.pem
+# 3130 for http only proxy
+http_port 3130
 #disable icp and snmp
 icp_port 0
 snmp_port 0
