changes on i3 & MAIN.sh

--- a/~/.i3/config
+++ b/~/.i3/config
@@ -27,8 +27,7 @@ font xft:Cousine, Icons 7
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvtc -e zsh ~/.i3/MAIN.sh
-#bindsym $mod+Return exec urxvtc -e zsh -c "exec tmux"
+bindsym $mod+Return exec urxvtc -e ~/.i3/MAIN.sh
 
 # kill focused window
 bindsym $mod+Shift+Q kill
