fix locale .conf

--- a/etc/locale.conf
+++ b/etc/locale.conf
@@ -1,6 +1,5 @@
 LANG=en_US.UTF-8
-LANGUAGE=en_US.UTF-8:en:fr_FR:fr:ar_TN:ar
-LC_CTYPE=en_US.UTF-8
+#LANGUAGE=en_US:en:fr_FR:fr:ar_TN:ar
 LC_TIME=en_DK.UTF-8
 LC_NUMERIC=C
 LC_COLLATE=C
