update zsh aliases and umask update vimperator editro update gtkrc-2.0 update squid

--- a/etc/squid/squid.conf
+++ b/etc/squid/squid.conf
@@ -60,7 +60,7 @@ ssl_bump bump all
 sslproxy_version 5
 sslproxy_options NO_SSLv2,NO_SSLv3,NO_TLSv1
 sslproxy_cert_error deny all
-sslproxy_flags DONT_VERIFY_PEER
+#sslproxy_flags DONT_VERIFY_PEER
 #sslproxy_chiper;
 always_direct allow all
 # http://wiki.squid-cache.org/Features/DynamicSslCert
@@ -68,9 +68,9 @@ sslcrtd_program /usr/lib/squid/ssl_crtd -s /home/cache/squid-ssl -M 50MB
 sslcrtd_children 20
 
 # 3128 for user manual config
-http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/squid.lejenome.me.pem
+http_port 3128 ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/squid.pem
 # 3129 for tranparent proxy for IPv4
-http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/cert/squid.lejenome.me.pem
+http_port 3129 intercept ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=50MB cert=/etc/squid/squid.pem key=/etc/squid/squid.pem
 # 3130 for http only proxy
 http_port 3130
 #disable icp and snmp
