fix vim vundle & update gtk 2.0/3.0 config & improve newsbeuter

--- a/~/.config/gtk-3.0/settings.ini
+++ b/~/.config/gtk-3.0/settings.ini
@@ -1,16 +1,17 @@
+##  https://developer.gnome.org/gtk3/stable/GtkSettings.html
 [Settings]
-#gtk-icon-theme-name = "Tango"
-gtk-theme-name = "Numix"
-#gtk-font-name = "DejaVu Sans 8"
+gtk-theme-name = Numix
+gtk-font-name = SourceCodePro Medium 8
+gtk-icon-theme-name = Numix-Circle
 
-gtk-document-font-name = 'Sans 9'
-gtk-font-name = 'Cantarell 9'
-#gtk-toolbar-style = 'both-horiz'
-gtk-toolbar-icons-size = 'small'
-#gtk-text-scaling-factor = 1.0
-gtk-monospace-font-name = 'Monospace 9'
-gtk-menu-popup-delay = 0
-
+gtk-decoration-layout = menu:
 # More privacy: disable ~/.local/share/recently-used.xbel
-gtk-recent-files-max-age=0
-gtk-recent-files-limit=0
+gtk-recent-files-enabled = false
+gtk-recent-files-max-age = 0
+# show last input char on password field for 600ms
+gtk-entry-password-hint-timeout = 400
+gtk-print-preview-command = zathura %f
+gtk-shell-shows-desktop = 0
+#gtk-im-module = ibus,xim
+#gtk-modules =
+#gtk-print-backends = file,cpus,lpr,cloudprint
