update asd & mpd config

--- a/etc/asd.conf
+++ b/etc/asd.conf
@@ -1,6 +1,6 @@
-WHATTOSYNC=( "/home/lejenome/.cmus" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" )
-WHATTOSYNC+=( "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles/~' "/home/lejenome/.local" )
-WHATTOSYNC+=( "/home/lejenome/.config" "/home/lejenome/.urxvt" "/home/lejenome/.getmail" )
-WHATTOSYNC+=( "/home/lejenome/.calcurse" )
+WHATTOSYNC=( "/home/lejenome/.mpd" "/home/lejenome/mail" "/home/lejenome/.vimperator/info" )
+WHATTOSYNC+=( "/home/lejenome/.weechat" '/mnt/Others/git/dotfiles' "/home/lejenome/.local/share" )
+WHATTOSYNC+=( "/home/lejenome/.config" "/home/lejenome/.getmail" )
+WHATTOSYNC+=( "/home/lejenome/.nvim/bundle" )
 
 VOLATILE="/dev/shm"
