--- a/~/.config/mpd/mpd.conf
+++ b/~/.config/mpd/mpd.conf
@@ -1,7 +1,7 @@
 music_directory			"~/Music"
 playlist_directory		"~/.mpd/playlists"
 db_file				"~/.mpd/database"
-log_file			"~/.mpd/log"
+log_file			"~/.cache/mpd.log"
 pid_file			"~/.mpd/pid"
 state_file			"~/.mpd/state"
 sticker_file			"~/.mpd/sticker.sql"
