update xkb settings and xf86 ati settings and enable multihead support on X11 xorg

--- a/etc/X11/xorg.conf.d/10-keyboard.conf
+++ b/etc/X11/xorg.conf.d/10-keyboard.conf
@@ -1,7 +1,9 @@
 Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
-        Option "XkbLayout" "pc104"
-        Option "XkbModel" "fr"
+	Driver "evdev"
+        Option "XkbLayout" "fr,ar"
+        Option "XkbModel" "pc105"
         Option "XkbVariant" "azerty"
+	Option "XkbOptions" "grp:rwin_toggle"
 EndSection
