--- a/etc/X11/xorg.conf.d/20-radeon.conf
+++ b/etc/X11/xorg.conf.d/20-radeon.conf
@@ -5,4 +5,5 @@ Section "Device"
     Option "AccelMethod"     "EXA"
     Option "RenderAccel"     "on"
     Option "ColorTiling"     "on"
+    Option "ColorTiling2D"   "on"
 EndSection
