--- a/~/.i3/config
+++ b/~/.i3/config
@@ -223,3 +223,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 exec --no-startup-id i3-msg "workspace 1:  TERM"
+
+for_window [window_role="pop-up"] floating enable
+for_window [window_role="task_dialog"] floating enable
+for_window [window_role="About"] floating enable
