update linux command line & journald.conf

--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -17,8 +17,8 @@ RuntimeMaxUse=20M
 SyncIntervalSec=10m
 SystemMaxFileSize=1M
 RuntimeMaxFileSize=1M
-#RuntimeKeepFree=
-#SystemKeepFree=
+RuntimeKeepFree=10M
+SystemKeepFree=10M
 #RateLimitInterval=30s
 #RateLimitBurst=1000
 #MaxRetentionSec=
