use $BROWSER instead of firefox

--- a/~/.npmrc
+++ b/~/.npmrc
@@ -6,10 +6,8 @@ init-author-url = "http://lejenome.github.io"
 init-license = "MIT"
 init-version = "0.1.0"
 
-tmp = "/tmp"
 unicode = true
 color = true
-editor = "/usr/bin/vim"
-git = "git"
-browser = "/usr/bin/firefox"
+browser = "${BROWSER}"
 viewer = "man"
+global = true
