update aliases and add logging masmtp mails

--- a/~/.msmtprc
+++ b/~/.msmtprc
@@ -11,6 +11,7 @@ port           587
 from           bmoez.j@gmail.com
 user           bmoez.j@gmail.com
 passwordeval   "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/secret/bmoez.j@gmail.com-pw.gpg"
+logfile		msmtp.log
 
 # Set a default account
 account default : gmail
