use glamor instead of EXA

--- a/etc/X11/xorg.conf.d/20-radeon.conf
+++ b/etc/X11/xorg.conf.d/20-radeon.conf
@@ -2,7 +2,7 @@ Section "Device"
     Identifier "Radeon"
     Driver "radeon"
     Option "EnablePageFlip"  "on"
-    Option "AccelMethod"     "EXA"
+    Option "AccelMethod"     "glamor"
     Option "RenderAccel"     "on"
     Option "ColorTiling"     "on"
     Option "ColorTiling2D"   "on"
