fix gpg backware breaking feature on v2.1 with gpg-agent popup on mutt

--- a/~/.gnupg/gpg.conf
+++ b/~/.gnupg/gpg.conf
@@ -1,5 +1,6 @@
 default-key 73659C9D
 armor
+#pinentry-mode loopback ## force reading pw from stdin # may break some functions use --pinentry-mode loopback instead
 #use-agent
 
 # If you do not pass a recipient to gpg, it will ask for one.  Using
@@ -25,3 +26,9 @@ personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
 
 keyring ~/.gnupg/pubring.gpg
 #keyring /etc/pacman.d/gnupg/pubring.gpg
+#
+# Set stronger algos
+personal-digest-preferences SHA512
+cert-digest-algo SHA512
+default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+personal-cipher-preferences TWOFISH CAMELLIA256 AES 3DES
