add note to ssh config

--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -45,3 +45,4 @@ Host *
     MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
     Protocol 2
     VisualHostKey yes
+    #FingerprintHash md5
