--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -36,7 +36,8 @@ Host docker-skype
   ForwardX11 yes
 
 Host android.qemu
-  MACs hmac-sha1
+  MACs hmac-md5,hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,hmac-ripemd160-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,hmac-ripemd160,umac-128@openssh.com
+  KexAlgorithms diffie-hellman-group14-sha1,curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
 
 # based on https://stribika.github.io/2015/01/04/secure-secure-shell.html
 Host *
