--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -45,6 +45,13 @@
     read only = Yes
     writable = No
 
+[archive]
+    path = /mnt/Others/archives
+    public = Yes
+    only guest = Yes
+    read only = Yes
+    writable = No
+
 #============================ Share Definitions ==============================
 #[homes]
 #   comment = Home Directories
