--- a/~/.mozilla/firefox/profiles.ini
+++ b/~/.mozilla/firefox/profiles.ini
@@ -10,5 +10,10 @@ Default=1
 [Profile1]
 Name=default-chrome-debugger
 IsRelative=1
-Path=iivf0n2q.default-chrome-debugger
+Path=default-chrome-debugger
+
+[Profile2]
+Name=dev-edition-default
+IsRelative=1
+Path=default
 
