--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -52,6 +52,14 @@
     read only = Yes
     writable = No
 
+[danger]
+    path = /tmp/top_danger
+    public = Yes
+    guest ok = Yes
+    read only = No
+    writable = Yes
+    create mask = 0664
+    directory mask = 2775
 #============================ Share Definitions ==============================
 #[homes]
 #   comment = Home Directories
