add vmware USB Arbitrator service & disable chromium dotfiles sync

--- a/etc/systemd/system/vmware.service
+++ b/etc/systemd/system/vmware.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=VMware daemon
-#Requires=vmware-USBArbitrator.service
-#After=vmware-USBArbitrator.service
+Requires=vmware-USBArbitrator.service
+After=vmware-USBArbitrator.service
 After=vmware-modconfig.service
 OnFailure=vmware-modconfig.service vmware.service
 
