update linux config to linux 4.0 && fix vmware-modconfig service

--- a/etc/systemd/system/vmware-modconfig.service
+++ b/etc/systemd/system/vmware-modconfig.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=VMware modules rebuild
+Before=vmware-modconfig.service
 
 [Service]
 ExecStart=/usr/bin/vmware-modconfig --install-all
