update mkinitcpio for lts releases

--- a/etc/mkinitcpio-lts.conf
+++ b/etc/mkinitcpio-lts.conf
@@ -1,4 +1,4 @@
-MODULES="ahci sd_mod btrfs"
+MODULES="ahci sd_mod btrfs virtio_pci virtio_blk virtio_net ext4"
 
 BINARIES=""
 
@@ -33,7 +33,8 @@ FILES=""
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS="base efistub-update" # udev autodetect modconf block filesystems keyboard efistub-update
+HOOKS="base udev autodetect modconf block filesystems keyboard efistub-update"
+#HOOKS="base efistub-update" # udev autodetect modconf block filesystems keyboard efistub-update
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
