update laptop mode confs

--- a/etc/laptop-mode/conf.d/ethernet.conf
+++ b/etc/laptop-mode/conf.d/ethernet.conf
@@ -56,7 +56,7 @@ THROTTLE_SPEED="slowest"
 DISABLE_WAKEUP_ON_LAN=1
 
 # A list of the ethernet devices that should be controlled.
-ETHERNET_DEVICES="eth0"
+ETHERNET_DEVICES="eth0 enp9s0"
 
 
 # In practise, most of the times a user is on battery, she is using the wireless device
