--- a/etc/laptop-mode/conf.d/runtime-pm.conf
+++ b/etc/laptop-mode/conf.d/runtime-pm.conf
@@ -25,3 +25,8 @@ CONTROL_RUNTIME_PM="auto"
 # Enable debug mode for this module
 # Set to 1 if you want to debug this module
 DEBUG=0
+CONTROL_RUNTIME_AUTOSUSPEND=1
+BATT_SUSPEND_RUNTIME=1
+LM_AC_SUSPEND_RUNTIME=1
+NOLM_AC_SUSPEND_RUNTIME=1
+AUTOSUSPEND_TIMEOUT=2
