fix efistub sync

--- a/etc/mkinitcpio-lts.conf
+++ b/etc/mkinitcpio-lts.conf
@@ -33,8 +33,8 @@ FILES=""
 #
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
-HOOKS="base udev autodetect modconf block filesystems keyboard efistub-update"
-#HOOKS="base efistub-update" # udev autodetect modconf block filesystems keyboard efistub-update
+HOOKS="base udev autodetect modconf block filesystems keyboard"
+#HOOKS="base" # udev autodetect modconf block filesystems keyboard
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
