update abs & pacman & powerpill

--- a/etc/abs.conf
+++ b/etc/abs.conf
@@ -28,5 +28,5 @@ MIRRORLIST="/etc/pacman.d/mirrorlist"
 # Note: If a repo is removed, it is still fetched!
 # Repos must be preceded with a ! to prevent fetching
 #
-REPOS=(core extra community !multilib !testing !community-testing !multilib-testing
+REPOS=(core extra community !multilib testing community-testing !multilib-testing
        !staging !community-staging !gnome-unstable !kde-unstable)
