--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -26,6 +26,7 @@ CheckSpace
 SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
 RemoteFileSigLevel = Required
+SigLevel = PackageRequired
 
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
