--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -14,12 +14,13 @@
 
     force create mode = 0664
     force directory mode = 0775
-    printcap name = /etc/printcap
+    #printcap name = /etc/printcap
 
     security = user
     map to guest = Bad User
 
-    interfaces = 192.168.1.1/24 192.168.2.1/24 192.168.20.1/24
+    #interfaces = 192.168.1.1/24 192.168.2.1/24 192.168.20.1/24
+    interfaces = 192.168.20.1/24
     hosts deny = 0.0.0.0/0
     hosts allow = 192.168.1.1/24 192.168.2.1/24 192.168.20.1/24
 
@@ -52,14 +53,14 @@
     read only = Yes
     writable = No
 
-[danger]
-    path = /tmp/top_danger
-    public = Yes
-    guest ok = Yes
-    read only = No
-    writable = Yes
-    create mask = 0664
-    directory mask = 2775
+#[danger]
+#    path = /tmp/top_danger
+#    public = Yes
+#    guest ok = Yes
+#    read only = No
+#    writable = Yes
+#    create mask = 0664
+#    directory mask = 2775
 #============================ Share Definitions ==============================
 #[homes]
 #   comment = Home Directories
