updat ei3 config and vifmrc

--- a/~/.i3/config
+++ b/~/.i3/config
@@ -139,8 +139,8 @@ bindsym XF86AudioPlay exec "mpc toggle"
 bindsym XF86AudioStop exec "mpc stop"
 bindsym XF86AudioNext exec "mpc next"
 bindsym XF86AudioPrev exec "mpc prev"
-bindsym XF86MonBrightnessUp    exec  "xbacklight -inc 10"
-bindsym XF86MonBrightnessDown  exec  "xbacklight -dec 10"
+bindsym XF86MonBrightnessUp    exec  "sudo backlightctl +10"
+bindsym XF86MonBrightnessDown  exec  "sudo backlightctl -10"
 bindsym XF86TouchpadToggle exec "synclient TouchpadOff=$(synclient | awk '/TouchpadOff/ {print ($3+1)%2}')"
 bindsym Print         exec  "scrot"
 # used sudoers to remove the needs to enter password
