--- a/~/.config/fontconfig/fonts.conf
+++ b/~/.config/fontconfig/fonts.conf
@@ -21,10 +21,9 @@
 	<edit mode="assign" name="hinting">
 		<bool>true</bool>
 	</edit>
-	<!--
 	<edit mode="assign" name="hintstyle">
-		<const>hintfull</const>
+		<!--<const>hintfull</const>-->
+		<const>hintslight</const>
 	</edit>
-	-->
     </match>
 </fontconfig>
