update vimperator and chromium config add .webm to mvp/mplayer listing on zsh

--- a/~/.vimperatorrc
+++ b/~/.vimperatorrc
@@ -12,3 +12,7 @@ set incsearch
 set smartcase
 set hlsearch
 set autocomplete
+command print hardcopy
+command about dialog about
+command printpreview dialog printpreview
+command aboutconfig tabopen about:config
